# t-NeRV

./: Example_MNIST.py  README.md  digits_test.py  pyproject.toml  smoke.py  smoke2.py
datasetloader/: datasetloader.py
torchdr/: __about__.py  __init__.py  affinity_matcher.py  base.py
torchdr/affinity/: __init__.py  base.py  entropic.py  knn_normalized.py  quadratic.py
torchdr/distance/: __init__.py  base.py  faiss.py  keops.py  torch.py
torchdr/eval/: KNN.py  NXcurve.py  __init__.py  kmeans.py  neighborhood_preservation.py  silhouette.py
torchdr/neighbor_embedding/: __init__.py  base.py  nerv.py  sne.py  t_nerv.py  tsne.py
torchdr/spectral_embedding/: __init__.py  incremental_pca.py  kernel_pca.py  pca.py  phate.py
torchdr/utils/: __init__.py  faiss.py  keops.py  manifold.py  radam.py  root_search.py  sparse.py  utils.py  validation.py  visu.py  wrappers.py
